--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,6 +88,25 @@ body {
 }
 
 .tiptap {
+  /* Code and preformatted text styles */
+  code {
+    background-color: var(--purple-light);
+    border-radius: 0.4rem;
+    color: var(--black);
+    font-size: 0.85rem;
+    padding: 0.25em 0.3em;
+  }
+
+  /* Link styles */
+  a {
+    @apply text-blue-600;
+    cursor: pointer;
+
+    &:hover {
+      @apply underline;
+    }
+  }
+
   /* Image-specific styling */
   img {
     display: block;
@@ -123,7 +142,7 @@ body {
     }
 
     th {
-      background-color: #C7C7C7;
+      background-color: #c7c7c7;
       font-weight: bold;
       text-align: left;
     }
